# $Id$

				bogofilter news

0.8.0	2002-11-06

	* Fixed portability to some systems, notably, Solaris and HP-UX,
	  added README.* for some systems to describe build issues.
	* Fixed "rpl_malloc" link failures.
	* Fixed bogofilter 0.7.6 passthrough regression on some systems:
	  The X-Bogofilter header would be added to the body and a bogus
	  blank line would be added.
	* Bogofilter now supports a configuration file named
          /etc/bogofilter.cf and/or ~/.bogofilter.cf.
	* Bogofilter's use of '-v' for printing spamicity statistics
	  has been organized with increasing levels of details as
	  additional '-v's are added.
	* When using the Robinson algorithm, bogofilter can print a
	  simple histogram showing word probability distribution.
	* Bogoutil supports a new '-w' switch for displaying tokens
	  from the word list databases.
	* Bogolexer added to distribution.  Provides easy access to
	  parsing a file to examine the tokens.
	* Bogolexer has a new '-p' (passthrough) for printing tokens and
	  bogoutil has a new '-p' (probability) for printing the
	  probabilities of one or more tokens.  They can be connected
	  via pipe to display the probabilities of all words in a message.
	* DB 4.1 support has been fixed.
	* Documentation updates.

0.7.6	2002-10-27

	* Added README.hp-ux for those using HP-UX.
	* Added support for additional architectures - ia64, arm,
	  powerpc, and s390.
	* Bogofilter -p mode now preserves CR and NUL characters.
	* Bogofilter -p mode now detects if the computer runs out of
	  memory.
	* Bogofilter supports a new "-l" switch to write run-time log
	  information to syslog.
	* Bogofilter supports a new algorithm to calculate the
	  "spamicity", the "Robinson" algorithm. It is enabled with the
	  new "-r" switch. The old behavior is called the "Graham"
	  algorithm and can be enforced with the new "-g" switch.  The
	  default behavior is to use the "Graham" algorithm.
	* Bogofilter now has an "-R FILE" option (that implies -r) to print