@@ -1,6 +1,6 @@
 # $Id$
 AC_INIT(bogofilter.c)
-AM_INIT_AUTOMAKE(bogofilter, 0.8.0)
+AM_INIT_AUTOMAKE(bogofilter, 0.8.0.rc2)
 AM_CONFIG_HEADER(config.h:config.in)
 AC_PROG_CC
 AM_PROG_LEX
