@@ -4,9 +4,12 @@
 #define MAXTOKENLEN	30
 
 // lexer interface
-#define TOKEN	1	// Ordinary token
-#define FROM	2	// Mail message delimiter
-#define BOUNDARY 3	// MIME boundary
+enum {
+    TOKEN = 1,	// regular token
+    FROM,	// mbox message delimiter
+    BOUNDARY,	// MIME multipart boundary line
+    EMPTY	// empty line
+};
 
 extern FILE	*yyin;
 
@@ -21,5 +24,6 @@ struct textblock
 
 extern struct textblock textblocks, *textend;
 
+extern int myfgets(char *buf, int max_size, FILE *s);
 extern int get_token(void);
 
