@@ -4,6 +4,8 @@
 
 0.8.0	2002-11-06
 
+	* Fixed passthrough mode in bogofilter: it no longer strips the
+	  spam-header from a mail body.
 	* Fixed portability to some systems, notably, Solaris and HP-UX,
 	  added README.* for some systems to describe build issues.
 	* Fixed "rpl_malloc" link failures.
